# cairnkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE.md  README.md  SETUP.md  USAGE.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex/: AGENTS.md  config.toml
.codex/agents/: architect-be.toml  architect-fe.toml  archiver.toml  codebase-profiler.toml  dev.toml  doc-collector.toml  knowledge-builder.toml  (+4 more)
agents/: architect-be.md  architect-fe.md  archiver.md  codebase-profiler.md  dev.md  doc-collector.md  knowledge-builder.md  product.md  tech.md  verify.md  visual.md
cairnkit/: __init__.py  __main__.py  cli.py  config.py  errors.py  evolve.py  gate.py  import_state.py  intent.py  notify.py  stages.py  state.py
commands/: evolve-apply.md  evolve.md  flow-import.md  flow-run.md  flow-status.md  knowledge.md  team-init.md
docs/: ADAPTERS.md
rules/: engineering-mechanics.md
scripts/: demo-knowledge-loop.sh  demo-run.sh  sync-to-codex.sh
src/: config.rs  errors.rs  evolve.rs  gate.rs  import_state.rs  intent.rs  main.rs  notify.rs  stages.rs  state.rs
tests/: cli.rs  conftest.py  knowledge_fixtures.py  test_cli.py  test_cli_inprocess.py  test_config.py  test_evolve.py  test_evolve_cli.py  test_gate.py  test_import_state.py  test_intent.py  test_kb_cli.py  test_kbrepo.py  test_kbrepo_cli.py  test_knowledge_index_query.py  test_knowledge_model.py  test_lifecycle.py  test_lifecycle_cli.py  test_lifecycle_loop.py  test_notify.py  test_notify_import_cli.py  test_stages.py  test_state.py
(+23 files in other folders)
