[package]
name = "cairnkit"
version = "0.1.0"
edition = "2021"
description = "A knowledge-precipitation harness for Claude Code — the deterministic core (Rust, single binary, zero runtime deps)."
license = "MIT"

[[bin]]
name = "cairn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
