[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cairnkit"
version = "0.1.0"
description = "A knowledge-precipitation harness for Claude Code — the deterministic Python core."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "cairnkit authors" }]
dependencies = [
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "coverage>=7",
]

[project.scripts]
cairn = "cairnkit.cli:main"

[tool.setuptools.packages.find]
include = ["cairnkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["cairnkit"]
branch = true
omit = ["cairnkit/__main__.py"]  # trivial -m entry shim; covered end-to-end via subprocess

[tool.coverage.report]
show_missing = true
